@@ -29,8 +29,6 @@
 
 (dynamic-call "init_xosd" (dynamic-link %library-file-name))
 
-(define-public make-xosd xosd-create)
-
 (unless (member %documentation-file-name documentation-files)
   (set! documentation-files (cons %documentation-file-name
                                   documentation-files)))
