@@ -2,6 +2,8 @@
 
 * Changes in 0.2 (since 0.1)
 
+** (xosd aliases) module added
+
 ** `xosd-create' argument is optional (defaults to 1)
 
 ** "pre-inst-env.el" added
